--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuActivity">
+    tools:context=".mainModule.MenuActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/searchbar"
@@ -46,6 +46,7 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerContenedor"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/item_contenedor"
